# lore

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  OPUS_REVIEW.md  README.md  SECURITY.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
docs/: API.md  DEPLOYMENT.md  OUTLINE_FEATURE_PARITY.md  SPEC.md
server/: Dockerfile
server/src/: main.rs
src/: config.rs  cron.rs  error.rs  lib.rs  main.rs  rate_limit.rs  state.rs
src/ai/: engine.rs
src/api/: ai_api.rs  auth.rs  collections.rs  comments.rs  cron_api.rs  docs.rs  emojis_api.rs  export.rs  export_jobs_api.rs  health.rs  import.rs  installation.rs  memberships.rs  mod.rs  notifications.rs  oauth_api.rs  pins.rs  reactions.rs  relationships.rs  search.rs  settings.rs  shares.rs  stars.rs  tree.rs  users.rs  views.rs  webhook_subscriptions.rs  webhooks.rs
src/auth/: handler.rs  middleware.rs  token.rs
src/cache/: page.rs
src/collections/: engine.rs  mod.rs
src/comments/: engine.rs
src/db/: mod.rs  schema.rs
src/doc_meta/: engine.rs  mod.rs
src/export_jobs/: engine.rs
src/git/: engine.rs  mod.rs  queue.rs
src/groups/: engine.rs  mod.rs
src/import/: engine.rs  mod.rs
src/memberships/: engine.rs
src/notifications/: mod.rs
src/outbound_webhooks/: engine.rs
src/pins/: engine.rs
src/preferences/: mod.rs
src/realtime/: yjs.rs
src/search/: engine.rs  mod.rs
(+119 files in other folders)
