[package]
name = "forge"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["ws", "macros", "multipart"] }
axum-extra = { version = "0.10", features = ["cookie", "typed-header"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Git
git2 = "0.19"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Search
tantivy = "0.22"

# Collaborative editing
yrs = "0.21"

# Cache
moka = { version = "0.12", features = ["future"] }

# Auth
argon2 = "0.5"
jsonwebtoken = "9"
uuid = { version = "1", features = ["v7", "serde"] }
rand = "0.9"

# Crypto (webhooks)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
figment = { version = "0.10", features = ["env", "toml"] }

# Markdown
pulldown-cmark = "0.12"

# HTTP client (webhook dispatch)
reqwest = { version = "0.12", features = ["json"] }

# Misc
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
base64 = "0.22"
regex = "1"

zip = "2"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
axum-test = "16"
